package ColoringBook.GameField;

public interface Consts {

}
