package ColoringBook;

import ColoringBook.StartPage.StartPage;
import java.io.IOException;

public class Rasckraska {

    public static void main(String[] args) throws IOException {
        StartPage startPage = new StartPage();
    }
}